--- a/数据库/mysql/数据库操作.md
+++ b/数据库/mysql/数据库操作.md
@@ -374,4 +374,54 @@ sudo systemctl restart mysql.service  #重启服务
 
 
 
+### 9 修改数据库登陆密码
+
+假设我们使用的是root账户。
+
+1.重置密码的第一步就是跳过MySQL的密码认证过程，方法如下：
+
+\#vim /etc/my.cnf(注：windows下修改的是my.ini)
+
+在文档内搜索mysqld定位到[mysqld]文本段：
+/mysqld(在vim编辑状态下直接输入该命令可搜索文本内容)
+
+在[mysqld]后面任意一行添加“skip-grant-tables”用来跳过密码验证的过程，如下图所示：
+
+![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727153846934-2016310105.png)
+
+保存文档并退出：
+
+\#:wq
+2.接下来我们需要重启MySQL：
+
+/etc/init.d/mysql restart(有些用户可能需要使用/etc/init.d/mysqld restart)
+
+![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727154310153-619345773.png)
+
+3.重启之后输入#mysql即可进入mysql。
+
+ ![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727154613466-19775596.png)
+
+4.接下来就是用sql来修改root的密码
+
+mysql> use mysql;
+mysql> update user set password=password("你的新密码") where user="root";
+
+(注:如果是5.7以上版本 用update user set authentication_string=password('你的新密码') where user='root' ;
+
+因为user表里的密码字段由password改为authentication_string) 
+
+mysql> flush privileges;
+mysql> quit
+
+到这里root账户就已经重置成新的密码了。
+
+5.编辑my.cnf,去掉刚才添加的内容，然后重启MySQL。大功告成！
+
+![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727155035919-869018458.png)
+
+ 
+
+可能比较迷惑的是在自己的平台上找不到my.cnf或者my.ini文件，如果你是Linux,使用如下方式可以搜索到：
+![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727155248684-2076378756.png)
 
