增加Navicat 无法连接mysql 和 apt安装mysql后 无法启动mysql客户机的解决方法

--- a/数据库/mysql/数据库操作.md
+++ b/数据库/mysql/数据库操作.md
@@ -87,8 +87,9 @@ sudo apt-get install -y mysql-server mysql-client
 - 修改表
 
   ~~~
-  #修改字段类型
+  #修改字段类型或长度
      alter table 表名 modify 字段名 类型 [限制]
+     alter table address modify column city char(30);
   #增加字段
      alter table 表名  add [column] 字段名 类型 [限制];
   #删除字段
@@ -111,6 +112,78 @@ sudo apt-get install -y mysql-server mysql-client
   unique 唯一
   default  缺省
   ~~~
+
+- 索引的创建与删除
+
+  - 创建索引
+
+  ```
+  语法:
+  CREATE [UNIQUE|FULLTEXT|SPATIAL] INDEX index_name
+   [USING index_type]
+   ON table_name (index_col_name,...)
+   
+  其中对应的语法变量信息如下：
+
+  [UNIQUE|FULLTEXT|SPATIAL]:
+  中括号中的这三个关键字表示创建的索引类型，它们分别表示唯一索引、全文索引、空间索引三种不同的索引类型。如果我们不指定任何关键字，则默认为普通索引。
+
+  index_name表示索引的名称，由用户自行定义，以便于以后对该索引进行修改等管理操作。
+
+  index_type表示索引的具体实现方式，在MySQL中，有两种不同形式的索引——BTREE索引和HASH索引。在存储引擎为MyISAM和InnoDB的表中只能使用BTREE，其默认值就是BTREE；在存储引擎为MEMORY或者HEAP的表中可以使用HASH和BTREE两种类型的索引，其默认值为HASH。
+
+  index_col_name表示需要创建索引的字段名称，我们还可以针对多个字段创建复合索引，只需要在多个字段名称之间以英文逗号隔开即可。此外，对于CHAR或VARCHAR类型的字段，我们还可以只使用字段内容前面的一部分来创建索引，只需要在对应的字段名称后面加上形如(length)的指令即可，表示只需要使用字段内容前面的length个字符来创建索引。在这里，我们以User表的username字段(类型为VARCHAR(50))为例，使用username字段的6个字符前缀来创建索引。
+  >> CREATE INDEX idx_user_username ON user (username(6));
+  使用字段的一部分创建索引可以使索引文件大大减小
+
+  必须注意的是，在MySQL中，对于TEXT和BLOB这种大数据类型的字段，必须给出前缀长度(length)才能成功创建索引。
+
+  备注1：上述创建索引的语法还具有以下变体：
+  ALTER TABLE table_name
+  ADD [UNIQUE|FULLTEXT|SPATIAL] INDEX index_name (index_col_name,...) [USING index_type]
+
+  备注2：在MySQL中，只有当数据表的存储引擎为MyISAM, InnoDB或BDB类型时，你才能向具有NULL值的列或者数据类型为TEXT或BLOB的列添加索引。
+  ```
+
+  - 删除索引
+
+
+```
+在MySQL中删除索引的方法非常简单，其完整语法如下：
+
+--删除指定表中指定名称的索引
+ALTER TABLE table_name
+DROP INDEX index_name;
+
+在这里，我们编写SQL语句将上面创建索引的例子中的索引idx_user_username删除掉，代码详情如下：
+--删除名称为idx_user_username的索引
+ALTER TABLE user
+DROP INDEX idx_user_username;
+```
+
+修改索引
+
+```
+在MySQL中并没有提供修改索引的直接指令，一般情况下，我们需要先删除掉原索引，再根据需要创建一个同名的索引，从而变相地实现修改索引操作
+--先删除
+ALTER TABLE user
+DROP INDEX idx_user_username;
+--再以修改后的内容创建同名索引
+CREATE INDEX idx_user_username ON user (username(8));
+```
+
+查看索引
+
+在MySQL中，要查看某个数据库表中的索引也非常简单，只需要使用以下两个命令中的任意一种即可。
+
+```
+--如果查看索引前，没有使用user db_name等命令指定具体的数据库，则必须加上FROM db_name
+SHOW INDEX FROM table_name [FROM db_name]
+--如果查看索引前，没有使用user db_name等命令指定具体的数据库，则必须加上db_name.前缀
+SHOW INDEX FROM [db_name.]table_name
+```
+
+
 
 ## 五、数据类型
 
@@ -424,4 +497,43 @@ mysql> quit
 
 可能比较迷惑的是在自己的平台上找不到my.cnf或者my.ini文件，如果你是Linux,使用如下方式可以搜索到：
 ![img](https://images2015.cnblogs.com/blog/862200/201607/862200-20160727155248684-2076378756.png)
+
+## 10 连接Navicat for mysql
+
+从任何主机上使用root用户，密码：youpassword（你的root密码）连接到mysql服务器：
+
+　　mysql>GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '你的密码' WITH GRANT OPTION;
+
+　   执行以下命令刷新权限 
+　　  FLUSH PRIVILEGES
+
+ 　　这时再通过navicat远程链接MySQL，链接测试,连接成功
+
+mysql登陆:
+
+ mysql -h10.0.0.1 -uroot -p123
+
+## 11 ubuntu apt安装 mysql 连接不上
+
+mysql版本为5.7.24,报错信息:
+
+```
+ERROR 2002 (HY000): Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)
+```
+
+出现这个问题的原因是没有生成 mysql.sock 文件
+
+我找到了 /ect/my.cnf 
+
+其中 [mysql]  和[mysqld]下面的  socket都是  /tmp/mysql.sock。
+
+然后发现/etc/mysql/Debian.cnf 中的socket 的路径是/var/run/mysql/mysqld.sock
+
+于是我们/etc/my.cnf 中的socket 的路径改成/var/run/mysql/mysqld.sock
+
+这样mysql 客户端就可以正常启动了。
+
+服务 mysql 读取的 配置和 程序mysql 读取的配置不是同一个，不知道mysql 到底是怎么改的。
+
+
 
