--- a/数据库/mysql/数据库操作.md
+++ b/数据库/mysql/数据库操作.md
@@ -444,7 +444,19 @@ sudo systemctl restart mysql.service  #重启服务
   - 常用的数据库引擎：myisam、innodb、archive、ndb、memory 
   - myisam和innodb的区别
 
+- 在windows环境下修改数据库默认字符集
 
+  ```
+  1、在MySQL的安装目录下找到my.ini(MySQL配置文件);
+
+  2、找到客户端client部分，将default-character-set=latin1改成default-character-set=utf8;
+
+  3、然后找到服务器server部分，将default-character-set=latin1改成default-character-set=utf8；
+
+  4、然后重启MySQL数据库就可以了！
+  ```
+
+  ​
 
 
 ### 9 修改数据库登陆密码
@@ -535,5 +547,24 @@ ERROR 2002 (HY000): Can't connect to local MySQL server through socket '/tmp/mys
 
 服务 mysql 读取的 配置和 程序mysql 读取的配置不是同一个，不知道mysql 到底是怎么改的。
 
+## 12 win10 启动mysql
+
+进入到mysql数据库的bin文件夹中(C:\Program Files (x86)\MySQL\MySQL Server 5.5\bin),打开shell(管理员权限)
+
+1. mysqld --install     (将mysql加入到window服务列表中)
+
+2. mysqld --initialize --user=root --console    (初始化mysql,会返回初始密码)
+
+3. net start mysql  (启动数据库)
+
+4. ```
+   使用返回的初始密码进入数据库后,
+   mysql> set password=password('123456');
+   ```
 
 
+如果之前已经加入过win服务列表的话,直接net start mysql 即可启动  net stop mysql即可关闭数据库.
+
+## 13 修改某张表的字符集为utf-8
+
+alter table `表名` convert to character set utf8;
